# EndtoEnd

./: .gitignore  CMakeLists.txt  End-to-end_radiation_therapy_optimization.pptx  README.md  benchmarking.cpp  build.sh  configure.sh  debug.sh  debug_FCBB_water.sh  dose_calculation.cpp  dosecalc.cpp  main.cpp  optimize_annealing_constrain.cpp  optimize_annealing_schedule.cpp  optimize_dynamic.cpp  optimize_dynamic_random.cpp  optimize_stationary.cpp  optimize_stationary_smoothness.cpp  run.sh  script  test_FCBB_water.sh
CCCS/: .dockerignore  .gitignore  CMakeDefs.cmake  CMakeLists.txt  Dockerfile  README.md  docker_build.sh  docker_run.sh  tags
CCCS/CudaUtilities/: CMakeLists.txt  array_sum.cu  array_sum.cuh  cuda_timing.cu  cuda_timing.cuh  dev_intrinsics.cuh  geometry.cu  geometry.cuh  macros.h  make_tex_surf.cuh  manage_gpu.cu  manage_gpu.cuh  memory_manager.cu  memory_manager.cuh  vector_ops.h
CCCS/DoseCalcAlgo/: CMakeLists.txt  cudaSiddon.cu  cudaSiddon.cuh
CCCS/DoseCalcIO/: CMakeLists.txt  beam.cpp  beam.h  binary_io.cpp  binary_io.h  calc_header.cpp  calc_header.h  ctlut.cpp  ctlut.h  dosecalcio.h  fluence.cpp  fluence.h  fmaps_io.cpp  fmaps_io.h  io_data_structs.h  io_helpers.cpp  io_helpers.h  json.cpp  json.h  kernel.cpp  kernel.h  macros.h  paths.cpp  paths.h  roi.cpp  roi.h  sparse_io.cpp  sparse_io.h  spectra.cpp  spectra.h  volume.cpp  volume.h
CCCS/RTClasses/: CMakeLists.txt  README.md  anonymize_dicom.cpp  logconfig.cpp  logconfig.h  rtimages.cpp  rtimages.h  rtstruct.cpp  rtstruct.h
CCCS/Utilities/: CMakeLists.txt  configparser.cpp  configparser.h  logging.cpp  logging.h  math.cpp  math.h  multithreading.cpp  thread.cpp  thread.h  timing.cpp  timing.h  wqueue.h
CCCS/anonymize_dicom/: anonymize_dicom.cpp
CCCS/data/ctlut/: siemens.txt
CCCS/data/dsa/: scaf10000  scaf150  scaf1500  scaf15000  scaf200  scaf20000  scaf300  scaf30000  scaf400  scaf4000  scaf40000  scaf500  scaf5000  scaf50000  scaf600  scaf6000  scaf800  scaf8000
CCCS/data/dsa_analytical/: analytical_poly_6MV.kern
CCCS/data/spectra/: MCDOWN_6mv.spec  spec6X_mcpsf.spec  spec_10XFFF.spec  spec_225kv.spec  spec_225kv_10mm.spec  spec_225kv_1mm.spec  spec_225kv_20mm.spec  spec_225kv_3mm.spec  spec_225kv_40mm.spec  spec_225kv_5mm.spec  spec_2mv.spec  spec_6X.spec  spec_6XFFF.spec  spec_6mv.spec  spec_6mv.spec.bak
CCCS/doc/: USAGE.md
CCCS/doc/schema_doc/: beamlet_data_output.md  config.md  fmo_data_output.md  full_beam_data_output.md
CCCS/doc/schema_examples/: example.kern  example_beamlist.txt  example_config.json  example_lut.txt  example_structures.json
CCCS/dosecalc-beam/: CMakeLists.txt  main.cu  nvbbRayConvolve_device.cu  nvbbRayConvolve_device.cuh  nvbbRayConvolve_host.cu
CCCS/dosecalc-beamlet/: CMakeLists.txt  main.cu  nvbbRayConvolve_device.cu  nvbbRayConvolve_device.cuh  nvbbRayConvolve_host.cu  sparsify_manager.cpp  sparsify_manager.h  sparsify_worker.cpp  sparsify_worker.h
CCCS/dosecalc-preprocess/: CMakeLists.txt  argparser.h  cudaMemFunctions.cu  cudaMemFunctions.cuh  debug.h  fmapProcessing.cpp  fmapProcessing.hpp  kernels.cuh  main.cu
CCCS/include/: debug.h  dosecalc_defs.h  profile.h  version.h.in
CCCS/include/client/: dummy_defs.h
CCCS/include/server/: brain_defs.h
CCCS/template/: Instructions.txt  run_dosecalc.sh  structures.json
CCCS/tests/: autotest.sh  debug_beam.sh  debug_beamlet.sh  debug_preprocess.sh  memcheck_beam.sh  memcheck_beamlet.sh  memcheck_preprocess.sh  test_beam.sh  test_beamlet.sh  test_phantom.sh  test_preprocess.sh  test_settings.conf  valgrind_beamlet.sh
CCCS/tests/input_files/: beamlist_18deg.txt  beamlist_36deg.txt  beamlist_4pi.txt  beamlist_test.txt  config.json  structures_lung.json  structures_prostate.json
CCCS/tests/utils/: avg_times.sh  generate_beamlist.py
CCCS/unit_tests/: CMakeLists.txt  beam.cpp  fmap_post_apertureready.cpp
CCCSclone/: CMakeLists.txt  benchmark.cu  derivation.md  main.cu  note.md
CCCSclone/data/dsa/: scaf1000  scaf1250  scaf2000  scaf3000
CCCSclone/data/spectra/: MCUP_6mv.spec  spec_10X.spec  spec_mono.spec
CCCSclone/include/new/: argparse.h  benchmark_host.cuh  utils.h
CCCSclone/include/old/: beam.h  binary_io.h  brain_defs.h  calc_header.h  configure.h  configure.h.in  cudaDoseCalc.h  cudaInit.h  debugLog.h  dev_intrinsics.cuh  dev_intrinsics.h  dosecalc_defs.h  geometry.h  kernel.h  macros.h  math.h  paths.h  spectra.h
CCCSclone/scripts/: alignment.py  benchAnalysis.py  benchmarking_old.sh  bnew.sh  dosecalc.sh  notes.md  profiling.sh  viewDens.py
CCCSclone/src/new/: argparse.cpp  beamsInit.cu  benchmark_host.cu
CCCSclone/src/old/: beam.cpp  binary_io.cpp  binary_io.cu  calc_header.cpp  cudaDoseCalc_device.cu  cudaDoseCalc_host.cu  cudaDoseCalc_utils.cpp  cudaInit.cu  cudaSiddon.cuh  debugLog.cu  debug_convolve.cpp.in  debug_raytrace.cpp.in  geometry.cpp  geometry.cu  kernel.cpp  math.cpp  paths.cpp  spectra.cpp
geant4/boxScore/: CMakeLists.txt  doseExamine.py  doseLateral.py  init_vis.mac  main.cpp  run.sh  vis.mac
geant4/boxScore/include/: ActionInitialization.h  AlternaltiveDetectorConstruction.h  DetectorConstruction.h  DummyActionInitialization.h  DummyDetectorConstruction.h  ParallelWorld.h  PhantomDef.h  PhysicsList.h  PrimaryGeneratorAction.h  Run.h  RunAction.h  StepMax.h  argparse.h
geant4/boxScore/src/: ActionInitialization.cpp  AlternativeDetectorConstruction.cpp  DetectorConstruction.cpp  DummyActionInitialization.cpp  DummyDetectorConstruction.cpp  ParallelWorld.cpp  PhantomDef.cpp  PhysicsList.cpp  PrimaryGeneratorAction.cpp  Run.cpp  RunAction.cpp  StepMax.cpp  argparse.cpp
geant4/cudaScratch/: CMakeLists.txt  cudaRayCast.cu  main.cpp
geant4/slabAccu/: CMakeLists.txt  gdb.sh  main.cpp  run.sh  viewDose.py
geant4/slabAccu/include/: ActionInitialization.h  DetectorConstruction.h  PhantomDef.h  PhysicsList.h  PrimaryGeneratorAction.h  Run.h  RunAction.h  (+4 more)
geant4/waterKernel/: CMakeLists.txt  PartiTrajComp.py  main.cpp  readme.md  run.sh
geant4/waterPoint/: CMakeLists.txt  analyze.py  main.cpp  run.sh  runKernel.sh  runRE01.sh  slabPointTab.cpp
(+342 files in other folders)
